Fix panel height on narrow screens

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -295,6 +295,9 @@
     float: none;
     width: 100%;
   }
+  [sxt-main-viewer] .main-tools.activeTool {
+    height: ~"calc(100% - 7em)";
+  }
 }
 
 .sxt-side-btn {
